--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="root">
-      <button class="left"><img src="/button/arrow_1.png" /></button>
+      <button class="left"><img src="./button/arrow_1.png" /></button>
       <div class="global-container">
         <div class="block-center">
           <img class="imageSlider" src="./images/1.jpg" alt="image 1" />
